[gd_scene load_steps=17 format=2]

[ext_resource path="res://resourses/weapons/projectiles/Missile.gd" type="Script" id=1]
[ext_resource path="res://assets/models/Kenney_space/weapons/foamBulletA.obj" type="ArrayMesh" id=2]
[ext_resource path="res://resourses/materials/CommonBullet_spatialmaterial.tres" type="Material" id=3]
[ext_resource path="res://assets/audio/noise.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/small_explosion.ogg" type="AudioStream" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2, 2, 1 )

[sub_resource type="SphereShape" id=2]
radius = 1.1

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0.505618, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=3]
gravity = Vector3( 0, 0, 0 )
scale_curve = SubResource( 7 )

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true

[sub_resource type="QuadMesh" id=5]
material = SubResource( 4 )
size = Vector2( 0.7, 0.1 )

[sub_resource type="SphereMesh" id=11]

[sub_resource type="SpatialMaterial" id=12]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0.968627, 1, 0, 1 )

[sub_resource type="Animation" id=8]
resource_name = "Explosion"
length = 0.3
step = 0.01
tracks/0/type = "bezier"
tracks/0/path = NodePath("Bubble:material/0:albedo_color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, 0, 0, 0.05, 0.0104318, 0, -0.05, 0.0337545, 0.25, 0 ),
"times": PoolRealArray( 0.08, 0.22, 0.3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Bubble:material/0:albedo_color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.1, 0, 0.652519, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"times": PoolRealArray( 0.08, 0.22, 0.3 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Bubble:material/0:albedo_color:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.252, 0, 0.05, -0.00776726, 0, -0.02, 0.227877, 0.25, 0 ),
"times": PoolRealArray( 0.08, 0.22, 0.3 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Bubble:scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.1, 0, 0.1, 0, 0.5, -0.05, 0, 0.05, 0, 1, -0.1, 0, 0.1, 0 ),
"times": PoolRealArray( 0, 0.16, 0.3 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Bubble:scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.1, 0, 0.1, 0, 0.5, -0.05, 0, 0.05, 0, 1, -0.1, 0, 0.1, 0 ),
"times": PoolRealArray( 0, 0.16, 0.3 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Bubble:scale:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.1, 0, 0.1, 0, 0.5, -0.05, 0, 0.05, 0, 1, -0.1, 0, 0.1, 0 ),
"times": PoolRealArray( 0, 0.16, 0.3 )
}
tracks/6/type = "value"
tracks/6/path = NodePath("Bubble:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Bubble:material/0:albedo_color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.968627, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Bubble:material/0:albedo_color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Bubble:material/0:albedo_color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Bubble:material/0:albedo_color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Bubble:scale:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Bubble:scale:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Bubble:scale:z")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="Missile" type="Area"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
collision_layer = 2
script = ExtResource( 1 )
speed = 30.0

[node name="foamBulletB" type="MeshInstance" parent="."]
transform = Transform( -10, -1.50996e-06, 6.60024e-14, 0, -4.37114e-07, -10, 1.50996e-06, -10, 4.37114e-07, 0, 0, 0 )
mesh = ExtResource( 2 )
material/0 = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.13, 0, 0, 0, 0.13, 0, 0, 0, 0.4, 0, 0, 0 )
shape = SubResource( 1 )

[node name="ExplosionArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="ExplosionArea"]
shape = SubResource( 2 )

[node name="Trail" type="Particles" parent="."]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 0, 0, 0 )
cast_shadow = 0
generate_lightmap = false
amount = 40
lifetime = 0.4
local_coords = false
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 5 )

[node name="Bubble" type="MeshInstance" parent="."]
transform = Transform( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/Explosion = SubResource( 8 )
anims/RESET = SubResource( 9 )

[node name="Explosion" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="Thrust" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[connection signal="body_entered" from="." to="." method="_on_Rocket_body_entered"]
